papers/paper35/v1.2/README.md
# Paper 35 v1.2 Reproducibility Bundle

This bundle supports Paper 35 v1.2 of the Interior Observer framework. It
reproduces the eta derivation chain, BBN temperature assignment, chiral
source-era diagnostic, external leptogenesis target reduction, baryogenesis
theorem-surface registry, JWST timing table, DESI active-branch confrontation,
geometric dark-sector consistency check, and the v1.2 R4/FIRAS impact audit.

Paper 35 v1.2 inherits the Paper 17 v1.5 FIRAS-fixed observer-side thermal
readout normalization. The observed CMB temperature is treated as the FIRAS
empirical input fixing `R4`; this bundle does not claim an independent CMB
temperature prediction.

## Quickstart

```bash
git clone https://github.com/dfife/io-framework-public.git
cd io-framework-public/papers/paper35/v1.2
python3 scripts/10_validate_expected_outputs.py
```

Expected final line:

```text
SUMMARY total_checks=38 pass_count=38 fail_count=0
```

## Detailed Reproduction

To regenerate the frozen JSON outputs:

```bash
python3 scripts/01_eta_derivation_chain.py
python3 scripts/02_temperature_assignment.py
python3 scripts/03_chiral_source_diagnostic.py
python3 scripts/04_leptogenesis_target_reduction.py
python3 scripts/05_baryogenesis_registry_summary.py
python3 scripts/06_jwst_formation_time_table.py
python3 scripts/07_desi_confrontation.py
python3 scripts/08_dark_matter_null_forecast.py
python3 scripts/09_r4_firas_impact_audit.py
python3 scripts/10_validate_expected_outputs.py
```

Script 07 fetches public DESI DR2 files and validates SHA256 checksums. No
external observational datasets are redistributed in this bundle.

## Discipline Statement

This bundle separates framework-specific reproduction from standard-literature
inputs and external observational data:

- Reproduced in scripts: IO eta chain with FIRAS-fixed `R4`, local BBN
  temperature assignment, chiral diagnostic, DESI active-branch calculation,
  JWST timing table, `f_b = 2 gamma / x`, dark-sector consistency checks, and
  the R4/conditional registry audit trail.
- Cited, not rederived: Davidson-Ibarra bound, sphaleron conversion,
  Casas-Ibarra parameterization, standard type-I seesaw equations, standard
  Boltzmann leptogenesis equations, blackbody photon number density, and
  mean-baryon-mass conventions.
- Cited/fetched/checksummed, not redistributed: DESI DR2 BAO files, Planck
  likelihoods, JWST observational products, and direct-detection limit data.

The theorem registry contains 48 surfaces: 15 `CLEAN` and 33
`CONDITIONAL_VERIFIED`. Conditional surfaces support audit-trail and
scope-tracking. They must not be cited as unconditional theorem closure.

## Contents

- `scripts/`: ten public reproduction/validation scripts.
- `data/`: constants, source pointers, external-data discipline, and theorem
  registry metadata.
- `results/`: frozen JSON outputs generated by scripts 01-09.
- `reports/`: v1.2 R4/FIRAS audit, v1.1 kappa audit retained as history,
  conditional audit, and theorem-registry reports.
- `environment/`: Python version, requirements, system package notes, and
  randomness/seed statement.

## Citation

If you use this bundle, cite the Paper 35 v1.2 manuscript and the GitHub
release:

```text
David Fife, Paper 35 v1.2 Reproducibility Bundle,
Interior Observer Framework public reproducibility repository,
GitHub release paper35-v1.2, May 2026.
https://github.com/dfife/io-framework-public/releases/tag/paper35-v1.2
```

Machine-readable citation metadata is provided in `CITATION.cff`.
