papers/paper35/v2.0/README.md
# Paper 35 v2.0 Reproducibility Bundle

This bundle supports Paper 35 v2.0 of the Interior Observer framework. It
reproduces the eta derivation chain, BBN temperature assignment, chiral
source-era diagnostic, external leptogenesis target reduction, baryogenesis
theorem-surface registry, JWST timing table, DESI scoped BAO-kernel
confrontation with raw-branch diagnostics and a conditional P2-imported
Ly-alpha shift branch, same-data DESI fixed-model diagnostics, geometric dark-sector consistency
check, and the inherited v1.2 R4/FIRAS impact audit.

Paper 35 v2.0 inherits the Paper 17 v1.5 FIRAS-fixed observer-side thermal
readout normalization. The observed CMB temperature is treated as the FIRAS
empirical input fixing `R4`; this bundle does not claim an independent CMB
temperature prediction.

## Quickstart

```bash
git clone https://github.com/dfife/io-framework-public.git
cd io-framework-public/papers/paper35/v2.0
python3 scripts/10_validate_expected_outputs.py
```

Expected final line:

```text
SUMMARY total_checks=58 pass_count=58 fail_count=0
```

## Detailed Reproduction

To regenerate the frozen JSON outputs:

```bash
python3 scripts/01_eta_derivation_chain.py
python3 scripts/02_temperature_assignment.py
python3 scripts/03_chiral_source_diagnostic.py
python3 scripts/04_leptogenesis_target_reduction.py
python3 scripts/05_baryogenesis_registry_summary.py
python3 scripts/06_jwst_formation_time_table.py
python3 scripts/07_desi_confrontation.py
python3 scripts/08_dark_matter_null_forecast.py
python3 scripts/09_r4_firas_impact_audit.py
python3 scripts/10_validate_expected_outputs.py
```

Script 07 fetches public DESI DR2 files and validates SHA256 checksums. It
archives the Paper 29 scoped BAO readout-kernel chi-square as the primary active
IO DESI result, retains the raw no-readout active-branch chi-square as a
diagnostic, archives the conditional P2-imported Ly-alpha shift branch with
shift uncertainty propagation, and reports the same-data fixed flat LambdaCDM
comparator. No external observational datasets are redistributed in this bundle.
The audit trail for this repair is recorded in
`reports/paper35_v2_desi_rca_report.md` and
`reports/paper35_v2_desi_full_rca_report.md`. The Layer 2 import evidence
for the conditional Ly-alpha shift branch is self-contained in
`reports/paper35_layer2_lya_shift_import_evidence_memo.md`.

## Discipline Statement

This bundle separates framework-specific reproduction from standard-literature
inputs and external observational data:

- Reproduced in scripts: IO eta chain with FIRAS-fixed `R4`, local BBN
  temperature assignment, chiral diagnostic, DESI scoped BAO-kernel calculation
  with raw active-branch diagnostic, conditional P2-imported Ly-alpha branch,
  and same-data fixed LambdaCDM comparator
  diagnostics, JWST timing table,
  `f_b = 2 gamma / x`, dark-sector consistency checks, and the R4/conditional
  registry audit trail.
- Cited, not rederived: Davidson-Ibarra bound, sphaleron conversion,
  Casas-Ibarra parameterization, standard type-I seesaw equations, standard
  Boltzmann leptogenesis equations, blackbody photon number density, and
  mean-baryon-mass conventions.
- Cited/fetched/checksummed, not redistributed: DESI DR2 BAO files, Planck
  likelihoods, JWST observational products, and direct-detection limit data.

The theorem registry contains 48 surfaces: 15 `CLEAN` and 33
`CONDITIONAL_VERIFIED`. Conditional surfaces support audit-trail and
scope-tracking. They must not be cited as unconditional theorem closure.

## Contents

- `scripts/`: ten public reproduction/validation scripts.
- `data/`: constants, source pointers, external-data discipline, and theorem
  registry metadata.
- `results/`: frozen JSON outputs generated by scripts 01-09.
- `reports/`: v1.2 R4/FIRAS audit retained as inherited support, DESI RCA
  reports, Layer 2 Ly-alpha import evidence memo, v1.1 kappa audit retained as history, conditional audit, and
  theorem-registry reports.
- `environment/`: Python version, requirements, system package notes, and
  randomness/seed statement.

## Citation

If you use this bundle, cite the Paper 35 v2.0 manuscript and the GitHub
release:

```text
David Fife, Paper 35 v2.0 Reproducibility Bundle,
Interior Observer Framework public reproducibility repository,
GitHub release paper35-v2.0, May 2026.
https://github.com/dfife/io-framework-public/releases/tag/paper35-v2.0
```

Machine-readable citation metadata is provided in `CITATION.cff`.
